infra/k8s/networking/cryptoofun-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cryptoofun-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - cryptoofun-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/tradebutler/
      rewrite:
        uri: /
      route:
        - destination:
            host: trade-butler
            port:
              number: 7170

    - match:
        - uri:
            prefix: /api/v1/marketdatastreamer/
      rewrite:
        uri: /
      route:
        - destination:
            host: market-data-streamer
            port:
              number: 7171

    - match:
        - uri:
            prefix: /api/v1/progression/
      rewrite:
        uri: /
      route:
        - destination:
            host: progression
            port:
              number: 7172

    - match:
        - uri:
            prefix: /api/v1/cashwallet/
      rewrite:
        uri: /
      route:
        - destination:
            host: cash-wallet
            port:
              number: 7370

    - match:
        - uri:
            prefix: /api/v1/portfolio/
      rewrite:
        uri: /
      route:
        - destination:
            host: portfolio
            port:
              number: 7371

    - match:
        - uri:
            prefix: /api/v1/leaderboard/
      rewrite:
        uri: /
      route:
        - destination:
            host: leaderboard
            port:
              number: 7372

    - match:
        - uri:
            prefix: /api/v1/lobby/
      rewrite:
        uri: /
      route:
        - destination:
            host: lobby
            port:
              number: 7373

    # The route for web app MUST always be at the end. (Istio matches paths in top-down order)
    # The web app catches all remaining routes.
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webapp
            port:
              number: 3000
