infra/k8s/networking/cryptoofun-web-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cryptoofun-web-vs
spec:
  hosts:
    - "web.cryptoofun"
  gateways:
    - cryptoofun-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webapp
            port:
              number: 3000
